# cookiecutter-dbt

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_slug }}/: .gitignore  .yamllint.yml  README.md  dbt_project.yml  justfile  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
