[project]
name = "{{ cookiecutter.project_slug.replace('_', '-') }}"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = []

[tool.sqlfluff.core]
dialect = "{{ cookiecutter.adapter if cookiecutter.adapter != 'spark' else 'sparksql' }}"
templater = "dbt"

[tool.sqlfluff.templater.dbt]
project_dir = "./"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.ruff]
extend-exclude = ["target", "dbt_packages"]

[tool.ruff.lint]
extend-select = ["I"]
